--- a/src/page.scss
+++ b/src/page.scss
@@ -18,7 +18,7 @@
   font-family: Arial, Helvetica, sans-serif;
   margin-top: 8rem;
 
-  div{
+  .heads, .call-to-action{
     display: inline-flex;
     flex-flow: row;
     justify-content: space-between;
