--- a/src/stylesheets/navigation_bar.scss
+++ b/src/stylesheets/navigation_bar.scss
@@ -24,7 +24,7 @@
   }
 
   #contact{
-    margin-top: 1%;
+    margin-top: 15px;
     margin-right: 10%;
     width: 8.688rem;
     height: 2.625rem;
